# acoustic-communication-and-bioacoustics-bootcamp

./: .all-contributorsrc  .gitignore  00-data-prep.ipynb  00-working-with-data-in-vocalpy.ipynb  01-segmentation.ipynb  02-feature-extraction.ipynb  03-cnn-feature-embeddings_wytham.ipynb  04-classification.ipynb  05-dimensionality-reduction-and-clustering.ipynb  05-outro.ipynb  LICENSE  README.md  pyproject.toml
acabb/: __init__.py  birdnet.py
code/: cnn-feature-embeddings_wytham.ipynb
